<resources>
    <string name="app_name">PSMusic</string>
    <string name="searchEditText">Search for songs, or artists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="songInfoTitle">Title:</string>
    <string name="songInfoAlbumName">Album:</string>
    <string name="songInfoPath">Path:</string>
    <string name="songInfoSize">Size:</string>
    <string name="songInfoDuration">Duration:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="favourites">Favourites</string>
    <string name="all_songs">All Songs</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="version">version</string>
    <string name="Songs_Not_Found_List">No songs found, try again later</string>
    <string name="Faverate_Song_Empty">Your Faverate List Is Empty</string>
    <string name="Scan_Complete">scan for song is successfuly complete</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="default_dark_mode">Default</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="library">Library</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tick">✓</string>


</resources>
