<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNoAlbum"
    tools:context=".AboutActivity">


    <ImageView
        android:id="@+id/arow_back_about"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_margin="@dimen/standardMargin"
        app:srcCompat="@drawable/ic_back_arrow_white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/arow_back_about"
        android:layout_alignBottom="@id/arow_back_about"
        android:layout_alignTop="@id/arow_back_about"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/standardTextSize_18"
        android:text="@string/about"/>

    <ImageView
        android:id="@+id/app_icon_about"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:src="@drawable/icon1"/>

    <TextView
        android:id="@+id/app_name_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon_about"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingTop="@dimen/standardMargin"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/standardTextSize_18"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/app_version_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_about"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/standardTextSize_15"
        android:text="@string/version"/>

    <TextView
        android:id="@+id/app_licenses_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/standardTextSize_14"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/standardMargin"
        android:text="Open Source Licenses"/>


</RelativeLayout>