<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    app:shape_roundRect_topLeftRadius="20dp"
    app:shape_roundRect_topRightRadius="20dp">

        <TextView
            android:id="@+id/fr_Name_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/standardMargin_X2"
            android:text="@string/dark_mode"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/fr_divider1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/fr_Name_top"
            android:layout_marginStart="@dimen/standardMargin_X2"
            android:layout_marginEnd="@dimen/standardMargin_X2"
            android:background="@color/gray300"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/fr_dark_mode_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fr_divider1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:padding="@dimen/standardMargin_X2"
            android:text="@string/default_dark_mode"
            android:textColor="@color/colorBlack" />
        
        <TextView
            android:id="@+id/tick_default_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fr_divider1"
            android:layout_above="@id/fr_divider2"
            android:gravity="center"
            android:visibility="invisible"
            android:textSize="@dimen/standardTextSize_18"
            android:layout_marginEnd="@dimen/standardMargin_X2"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorGreen"
            android:text="\u2713"/>

        <LinearLayout
            android:id="@+id/fr_divider2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/fr_dark_mode_default"
            android:layout_marginStart="@dimen/standardMargin_X2"
            android:layout_marginEnd="@dimen/standardMargin_X2"
            android:background="@color/gray300"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/fr_dark_mode_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fr_divider2"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:padding="@dimen/standardMargin_X2"
            android:text="@string/on"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tick_on_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fr_divider2"
            android:layout_above="@id/fr_divider3"
            android:gravity="center"
            android:visibility="invisible"
            android:textSize="@dimen/standardTextSize_18"
            android:layout_marginEnd="@dimen/standardMargin_X2"
            android:layout_alignParentEnd="true"
            android:textColor="#4CAF50"
            android:text="\u2713"/>

        <LinearLayout
            android:id="@+id/fr_divider3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/fr_dark_mode_on"
            android:layout_marginStart="@dimen/standardMargin_X2"
            android:layout_marginEnd="@dimen/standardMargin_X2"
            android:background="@color/gray300"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/fr_dark_mode_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fr_divider3"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:padding="@dimen/standardMargin_X2"
            android:text="@string/off"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tick_off_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fr_divider3"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_alignBottom="@id/fr_dark_mode_off"
            android:textSize="@dimen/standardTextSize_18"
            android:layout_marginEnd="@dimen/standardMargin_X2"
            android:layout_alignParentEnd="true"
            android:textColor="#4CAF50"
            android:text="\u2713"/>

</RelativeLayout>

