<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="songInfo"
            type="com.example.ps.musicps.viewmodels.SongInfoViewModel" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="@dimen/standardMargin"
        android:layout_marginEnd="@dimen/standardMargin"
        android:layout_marginBottom="@dimen/standardMargin_X2"
        app:cardElevation="5dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/standardMargin_X2"
                android:layout_marginTop="@dimen/standardMargin_X2"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:text="@string/songInfoTitle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standardTextSize_14"
                />
            <TextView
                android:id="@+id/tv_title_value_SongInfoDialog"
                android:layout_toEndOf="@id/tv_title_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standardMargin_X2"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:layout_alignStart="@id/tv_duration_value_SongInfoDialog"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@{songInfo.title}"
                android:textSize="@dimen/standardTextSize_14"
                tools:text="11111"
                />

            <TextView
                android:id="@+id/tv_album_SongInfoDialog"
                android:layout_below="@id/tv_title_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/standardMargin_X2"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:text="@string/songInfoAlbumName"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standardTextSize_14"
                />
            <TextView
                android:id="@+id/tv_album_value_SongInfoDialog"
                android:layout_toEndOf="@id/tv_title_SongInfoDialog"
                android:layout_below="@id/tv_title_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_alignStart="@id/tv_duration_value_SongInfoDialog"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@{songInfo.album}"
                android:textSize="@dimen/standardTextSize_14"
                tools:text="11111"
                />

            <TextView
                android:id="@+id/tv_duration_SongInfoDialog"
                android:layout_below="@id/tv_album_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/standardMargin_X2"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:text="@string/songInfoDuration"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standardTextSize_15"
                />
            <TextView
                android:id="@+id/tv_duration_value_SongInfoDialog"
                android:layout_toEndOf="@id/tv_duration_SongInfoDialog"
                android:layout_below="@id/tv_album_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_marginStart="@dimen/standardMargin_X2"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@{songInfo.duration}"
                android:textSize="@dimen/standardTextSize_14"
                tools:text="11111"
                />

            <TextView
                android:id="@+id/tv_size_SongInfoDialog"
                android:layout_below="@id/tv_duration_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/standardMargin_X2"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:text="@string/songInfoSize"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standardTextSize_14"
                />
            <TextView
                android:id="@+id/tv_size_value_SongInfoDialog"
                android:layout_toEndOf="@id/tv_size_SongInfoDialog"
                android:layout_below="@id/tv_duration_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_duration_value_SongInfoDialog"
                android:textStyle="bold"
                android:ellipsize="end"
                android:text="@{songInfo.size}"
                android:textSize="@dimen/standardTextSize_14"
                tools:text="11111"
                />

            <TextView
                android:id="@+id/tv_path_SongInfoDialog"
                android:layout_below="@id/tv_size_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/standardMargin_X2"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:text="@string/songInfoPath"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standardTextSize_14"
                />
            <TextView
                android:id="@+id/tv_path_value_SongInfoDialog"
                android:layout_toEndOf="@id/tv_path_SongInfoDialog"
                android:layout_below="@id/tv_size_SongInfoDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:layout_alignStart="@id/tv_duration_value_SongInfoDialog"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:ellipsize="end"
                android:text="@{songInfo.path}"
                android:textSize="@dimen/standardTextSize_14"
                tools:text="11111"
                />

            <TextView
                android:id="@+id/tv_cancel_SongInfoDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/smallMargin"
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="Cancel"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"
                android:layout_below="@id/tv_path_SongInfoDialog"
                android:layout_marginBottom="@dimen/standardMargin_X2"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/standardTextSize_15"
                />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>
