<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".View.MainActivity">

    <ImageView
        android:id="@+id/iv_song_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="fitXY"
        tools:padding="36dp"
        tools:src="@drawable/ic_no_album_128"
        tools:background="@color/colorGray">

    </ImageView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/lin_divider_horizental_top_main"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:background="@color/gray600"
            android:translationZ="100dp"
            android:orientation="horizontal"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_allSong_main"
            android:layout_width="match_parent"
            android:layout_toStartOf="@id/lin_divider_vertical_main"
            android:layout_above="@id/lin_divider_horizental_main"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            tools:cardBackgroundColor="#80000000"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:orientation="vertical">

                   <ImageView
                       android:id="@+id/iv_AllSong_Main"
                       android:layout_width="60dp"
                       android:layout_height="60dp"
                       android:layout_gravity="center"
                       android:tint="@color/colorAccent"
                       app:srcCompat="@drawable/ic_queue_music_black_24dp" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/all_songs"
                       android:gravity="center"
                       android:padding="@dimen/standardMargin"
                       android:textStyle="bold"
                       android:textColor="@color/colorTextMain"
                       android:textSize="@dimen/standardTextSize_18"
                       />


               </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_about_main"
            android:layout_width="match_parent"
            android:layout_toStartOf="@id/lin_divider_vertical_main"
            android:layout_below="@id/lin_divider_horizental_main"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            tools:cardBackgroundColor="#80000000"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_about_Main"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:tint="#FF9800"
                        app:srcCompat="@drawable/ic_info_outline_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:gravity="center"
                        android:padding="@dimen/standardMargin"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextMain"
                        android:textSize="@dimen/standardTextSize_18"
                        />


                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/lin_divider_vertical_main"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            />

        <LinearLayout
            android:id="@+id/lin_divider_horizental_main"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_centerInParent="true"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_faverate_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:cardBackgroundColor="#80000000"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:layout_above="@id/lin_divider_horizental_main"
            android:layout_toEndOf="@id/lin_divider_vertical_main">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/iv_Faverate_Main"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="@dimen/smallMargin"
                        android:layout_gravity="center"
                        android:tint="@color/colorRed"
                        app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/favourites"
                        android:gravity="center"
                        android:padding="@dimen/standardMargin"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextMain"
                        android:textSize="@dimen/standardTextSize_18"
                        android:layout_below="@id/iv_Faverate_Main"/>


                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_setting_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            tools:cardBackgroundColor="#80000000"
            android:foreground="?selectableItemBackgroundBorderless"
            android:layout_below="@id/lin_divider_horizental_main"
            android:layout_toEndOf="@id/lin_divider_vertical_main">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/iv_setting_Main"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="@dimen/smallMargin"
                        android:layout_gravity="center"
                        android:tint="@color/gray500"
                        app:srcCompat="@drawable/ic_settings_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting"
                        android:gravity="center"
                        android:padding="@dimen/standardMargin"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextMain"
                        android:textSize="@dimen/standardTextSize_18"
                        android:layout_below="@id/iv_Faverate_Main"/>


                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>